# slide-gen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NEW_CLI_EXAMPLES.md  README.md  justfile  pyproject.toml
.claude/: settings.local.json
examples/academic-research/: config.yaml  generation-log.md  slides-images.md  slides.md
examples/business-strategy/: config.yaml  generation-log.md  slides-images.md  slides.md
examples/corporate-excellence/: README.md  generation-log.md  slides-images.md
examples/creative-presentation/: README.md  generation-log.md  slides-images.md
examples/tech-presentation/: config.yaml
examples/tech-presentation-gemini/: config.yaml  generation-log.md  slides-images.md  slides.md
examples/tech-presentation-openai/: generation-log.md
src/slide_gen/: __init__.py  cli.py
src/slide_gen/processors/: __init__.py  directory_generator.py  directory_processor.py  image_generator.py  slide_processor.py
src/slide_gen/providers/: __init__.py  base.py  gemini_provider.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py
src/slide_gen/utils/: __init__.py  config_loader.py  file_utils.py
